<resources>
    <string name="app_name">Cosaint</string>
    <string name="action_settings">Settings</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email Id</string>
    <string name="register">Register</string>
    <string name="otp">OTP</string>
    <string name="otpMessage">The OTP has been sent to your mobile devices</string>
    <string name="confirm">Confirm OTP</string>
    <string name="contact1">First Contact</string>
    <string name="contact2">Second Contact</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="no_internet">Could Not Connect to Internet</string>
    <string name="password">Enter A Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="no_text">No Fields should be blank</string>
    <string name="too_short">Password too short</string>
    <string name="failed">Authentication Failed</string>
    <string name="forgot_password_message">We will send an email for resetting the password</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_yourself">Not A Member?Register Here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_match">Passwords didn\'t match</string>
    <string name="add_emergency">Add Emergency Contacts</string>
    <string name="get_my_money">Reset Password</string>
    <string name="already_registered">User Is Already Registered</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
</resources>
