<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/email"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <com.tcs.ui.button.ButtonPlus
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/abc_alpha_btn_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:layout_marginTop="35dip"
        android:clickable="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:layout_marginTop="35dip"
        android:clickable="true"/>

</LinearLayout>
