<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/toolbar"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/name"
        android:padding="15dp"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/etName"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="15dp"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/etMobile"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/email"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/etEmail"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/etPassword"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/confirm_password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:paddingRight="2dp"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <com.tcs.ui.button.ButtonPlus
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        style="@style/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/abc_alpha_btn_background"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:visibility="gone"/>

</RelativeLayout>
