<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtContact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/contact1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/name"
        android:padding="10dp"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPhone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="10dp"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtContact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="25dip"
        android:text="@string/contact2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/name"
        android:padding="10dp"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/abc_alpha_et_background"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="10dp"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp" />

    <com.tcs.ui.button.ButtonPlus
        android:id="@+id/btnSave"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/abc_alpha_btn_background"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>
